--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,8 @@
 
 # Ignorar a pasta node_modules
 node_modules/
-
+src/uploads/audio/
+src/uploads/image/
 # Ignorar outras pastas e arquivos desnecessários que você não quer versionar
 .DS_Store
 dist/
